// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Indicator /> should render 1`] = `
<View
  accessibilityLabel="Success"
  alignItems="center"
  display="flex"
  flexDirection="row"
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <RNSVGSvgView
      accessibilityElementsHidden={true}
      align="xMidYMid"
      bbHeight="8px"
      bbWidth="8px"
      fill="none"
      focusable={false}
      height="8px"
      importantForAccessibility="no-hide-descendants"
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 8,
            "width": 8,
          },
        ]
      }
      vbHeight={10}
      vbWidth={10}
      width="8px"
    >
      <RNSVGGroup
        fill={null}
        propList={
          Array [
            "fill",
          ]
        }
      >
        <RNSVGCircle
          cx="5"
          cy="5"
          fill={4281484642}
          propList={
            Array [
              "fill",
            ]
          }
          r="5"
        />
        <RNSVGCircle
          cx="5"
          cy="5"
          propList={
            Array [
              "stroke",
              "strokeWidth",
            ]
          }
          r="4.75"
          stroke={787279859}
          strokeWidth="0.5"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      Array [
        Object {
          "marginLeft": 4,
        },
      ]
    }
  >
    <Text
      color="surface.text.subtle.lowContrast"
      fontFamily="text"
      fontSize={100}
      fontStyle="normal"
      fontWeight="regular"
      lineHeight="l"
      style={
        Array [
          Object {
            "color": "hsla(216, 27%, 36%, 1)",
            "fontFamily": "Lato",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
          Object {},
        ]
      }
    />
  </View>
</View>
`;

exports[`<Indicator /> should render different variants for size and intent 1`] = `
Array [
  <View
    accessibilityLabel="Warning"
    alignItems="center"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
        ]
      }
    >
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        align="xMidYMid"
        bbHeight="6px"
        bbWidth="6px"
        fill="none"
        focusable={false}
        height="6px"
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "flex": 0,
              "height": 6,
              "width": 6,
            },
          ]
        }
        vbHeight={10}
        vbWidth={10}
        width="6px"
      >
        <RNSVGGroup
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        >
          <RNSVGCircle
            cx="5"
            cy="5"
            fill={4290738691}
            propList={
              Array [
                "fill",
              ]
            }
            r="5"
          />
          <RNSVGCircle
            cx="5"
            cy="5"
            propList={
              Array [
                "stroke",
                "strokeWidth",
              ]
            }
            r="4.75"
            stroke={787279859}
            strokeWidth="0.5"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        Array [
          Object {
            "marginLeft": 4,
          },
        ]
      }
    >
      <Text
        color="surface.text.subtle.lowContrast"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight="s"
        style={
          Array [
            Object {
              "color": "hsla(216, 27%, 36%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      />
    </View>
  </View>,
  <View
    accessibilityLabel="Success"
    alignItems="center"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
        ]
      }
    >
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        align="xMidYMid"
        bbHeight="8px"
        bbWidth="8px"
        fill="none"
        focusable={false}
        height="8px"
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "flex": 0,
              "height": 8,
              "width": 8,
            },
          ]
        }
        vbHeight={10}
        vbWidth={10}
        width="8px"
      >
        <RNSVGGroup
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        >
          <RNSVGCircle
            cx="5"
            cy="5"
            fill={4278224216}
            propList={
              Array [
                "fill",
              ]
            }
            r="5"
          />
          <RNSVGCircle
            cx="5"
            cy="5"
            propList={
              Array [
                "stroke",
                "strokeWidth",
              ]
            }
            r="4.75"
            stroke={787279859}
            strokeWidth="0.5"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        Array [
          Object {
            "marginLeft": 4,
          },
        ]
      }
    >
      <Text
        color="surface.text.subtle.lowContrast"
        fontFamily="text"
        fontSize={100}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight="l"
        style={
          Array [
            Object {
              "color": "hsla(216, 27%, 36%, 1)",
              "fontFamily": "Lato",
              "fontSize": 15,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      />
    </View>
  </View>,
  <View
    accessibilityLabel="Error"
    alignItems="center"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
        ]
      }
    >
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        align="xMidYMid"
        bbHeight="10px"
        bbWidth="10px"
        fill="none"
        focusable={false}
        height="10px"
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "flex": 0,
              "height": 10,
              "width": 10,
            },
          ]
        }
        vbHeight={10}
        vbWidth={10}
        width="10px"
      >
        <RNSVGGroup
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        >
          <RNSVGCircle
            cx="5"
            cy="5"
            fill={4291770400}
            propList={
              Array [
                "fill",
              ]
            }
            r="5"
          />
          <RNSVGCircle
            cx="5"
            cy="5"
            propList={
              Array [
                "stroke",
                "strokeWidth",
              ]
            }
            r="4.75"
            stroke={787279859}
            strokeWidth="0.5"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        Array [
          Object {
            "marginLeft": 4,
          },
        ]
      }
    >
      <Text
        color="surface.text.subtle.lowContrast"
        fontFamily="text"
        fontSize={100}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight="l"
        style={
          Array [
            Object {
              "color": "hsla(216, 27%, 36%, 1)",
              "fontFamily": "Lato",
              "fontSize": 15,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      />
    </View>
  </View>,
  <View
    accessibilityLabel="Info"
    alignItems="center"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
        ]
      }
    >
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        align="xMidYMid"
        bbHeight="8px"
        bbWidth="8px"
        fill="none"
        focusable={false}
        height="8px"
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "flex": 0,
              "height": 8,
              "width": 8,
            },
          ]
        }
        vbHeight={10}
        vbWidth={10}
        width="8px"
      >
        <RNSVGGroup
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        >
          <RNSVGCircle
            cx="5"
            cy="5"
            fill={4278226099}
            propList={
              Array [
                "fill",
              ]
            }
            r="5"
          />
          <RNSVGCircle
            cx="5"
            cy="5"
            propList={
              Array [
                "stroke",
                "strokeWidth",
              ]
            }
            r="4.75"
            stroke={787279859}
            strokeWidth="0.5"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        Array [
          Object {
            "marginLeft": 4,
          },
        ]
      }
    >
      <Text
        color="surface.text.subtle.lowContrast"
        fontFamily="text"
        fontSize={100}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight="l"
        style={
          Array [
            Object {
              "color": "hsla(216, 27%, 36%, 1)",
              "fontFamily": "Lato",
              "fontSize": 15,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      />
    </View>
  </View>,
]
`;
